--- a/.github/workflows/sync.yml
+++ b/.github/workflows/sync.yml
@@ -13,7 +13,7 @@ jobs:
       - uses: actions/setup-node@v1
         with:
           node-version: "13.x"
-
+      # Maybe switch to https://github.com/bahmutov/npm-install
       - name: Cache node modules
         uses: actions/cache@v1
         with:
